uploads: fix file upload component colors in dark mode.
Fix the file upload component blending into the background in dark mode.

--- a/app/components/file_upload_component/file_upload_component.scss
+++ b/app/components/file_upload_component/file_upload_component.scss
@@ -1,4 +1,6 @@
 .file-upload-component {
+  background-color: var(--file-upload-component-background-color);
+
   form {
     margin: 0;
   }
